--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/compasso
+spring.datasource.url=jdbc:postgresql://database:5432/compasso
 spring.datasource.username=postgres
 spring.datasource.password=postgres
